// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`happy path 1`] = `
<div
  className="layout-row flex-100 layout-wrap layout-align-center"
>
  <div
    className="content_width_booking layout-row layout-wrap layout-align-center"
  >
    <div
      className="toggle_aggregated_sec flex-50 layout-row layout-align-space-around-center"
    >
      <h3
        onClick={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        Cargo Units
      </h3>
      <Toggle
        checked={false}
        className="flex-none aggregated_cargo"
        icons={
          Object {
            "checked": <Unknown />,
            "unchecked": <Unknown />,
          }
        }
        id="aggregated_cargo"
        name="aggregated_cargo"
        onChange={[Function]}
        tabIndex="-1"
      />
      <h3
        onClick={[Function]}
        style={
          Object {
            "opacity": 0.4,
          }
        }
      >
        Total Dimensions
      </h3>
    </div>
  </div>
</div>
`;

exports[`when checked 1`] = `
<div
  className="layout-row flex-100 layout-wrap layout-align-center"
>
  <div
    className="content_width_booking layout-row layout-wrap layout-align-center"
  >
    <div
      className="toggle_aggregated_sec flex-50 layout-row layout-align-space-around-center"
    >
      <h3
        onClick={[Function]}
        style={
          Object {
            "opacity": 0.4,
          }
        }
      >
        Cargo Units
      </h3>
      <Toggle
        checked={true}
        className="flex-none aggregated_cargo"
        icons={
          Object {
            "checked": <Unknown />,
            "unchecked": <Unknown />,
          }
        }
        id="aggregated_cargo"
        name="aggregated_cargo"
        onChange={[Function]}
        tabIndex="-1"
      />
      <h3
        onClick={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        Total Dimensions
      </h3>
    </div>
  </div>
</div>
`;

exports[`when disabled 1`] = `""`;
